--- a/devAdda-backend/package.json
+++ b/devAdda-backend/package.json
@@ -10,6 +10,7 @@
   "author": "Vivek",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
