--- a/devAdda-frontend/package.json
+++ b/devAdda-frontend/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
