--- a/devAdda-backend/secrets.env
+++ b/devAdda-backend/secrets.env
@@ -1,1 +1,1 @@
-DB_CONNECTION_STRING="mongodb+srv://NodeProject:Nn2GwuWsDJ6aBSP8@nodeproject.yejj8za.mongodb.net/devAdda"
+DB_CONNECTION_STRING=mongodb+srv://NodeProject:Nn2GwuWsDJ6aBSP8@nodeproject.yejj8za.mongodb.net/devAdda
